[tool.poetry]
name = "qualtrics-utils"
version = "0.6.5"
description = "Utilities for qualtrics surveys."
authors = ["Mike Babb <mike7400@gmail.com>"]

readme = "README.md"
keywords = ["qualtrics", "qualtrics-api", "qualtrics-util"]
license = "MIT"
repository = "https://github.com/mkbabb/qualtrics-utils"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
numpy = "^1.26.3"
googleapiutils2 = "^0.13.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.15.1"
mypy = "^1.8.0"
black = "^23.12.1"
types-requests = "^2.31.0.20240106"
pytest = "^7.4.4"
pymysql = "^1.1.0"
pandas-stubs = "^2.1.4.231227"

[[tool.mypy.overrides]]
module = "google.*,google_auth_oauthlib.*"
ignore_missing_imports = true

[tool.poetry.scripts]
qualtrics-utils-sync = "qualtrics_utils.sync:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
