[tool.poetry]
name = "qualtrics-utils"
version = "1.0.5"
description = "Utilities for qualtrics surveys."
authors = ["Mike Babb <mike7400@gmail.com>"]

readme = "README.md"
keywords = ["qualtrics", "qualtrics-api", "qualtrics-util"]
license = "MIT"
repository = "https://github.com/mkbabb/qualtrics-utils"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
numpy = "^2.1.2"
googleapiutils2 = "^0.14"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.15.1"
mypy = "^1.13.0"
black = "^24.10.0"
types-requests = "^2.32.0.20241016"
pytest = "^8.3.3"
pymysql = "^1.1.1"
pandas-stubs = "^2.2.3.241009"

[[tool.mypy.overrides]]
module = "google.*,google_auth_oauthlib.*"
ignore_missing_imports = true

[tool.poetry.scripts]
qualtrics-utils-sync = "qualtrics_utils.sync:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
